show my builds and my labs icon in sidebar without login. Might help getting more visibility fix design

--- a/projects/commudle-admin/src/app/feature-modules/labs/components/edit-lab/edit-lab.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/labs/components/edit-lab/edit-lab.component.scss
@@ -90,6 +90,9 @@
         margin-top: 1.5rem;
       }
 
+      .publish-notification {
+        margin-top: 3.5rem;
+      }
 
       .actions {
         margin-top: 1rem;
